--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,31 @@
 
 :root{
     --background-clr: rgb(225, 225, 225);
+    --secondary-background-clr: white;
     
     --border-color: black;
     --text-color: black;
 
     --cell-clr: rgb(194, 194, 194);
-    --revealed-cell-clr: rgb(185, 185, 185);
-    --marked-cell-clr: rgb(189, 189, 189);
+    --revealed-cell-clr: rgb(184, 184, 184);
+
+    --secondary-clr: rgb(77, 77, 77);
+    --secondary-text-color: white;
+}
+
+.dark-mode{
+    --background-clr: rgb(79, 79, 79);
+    --secondary-background-clr: rgb(150, 150, 150);
+    
+    --border-color: white;
+    --text-color: white;
+
+    --cell-clr: rgb(149, 149, 149);
+    --revealed-cell-clr: rgb(138, 138, 138);
+
+    --secondary-clr: rgb(51, 51, 51);
+    --secondary-text-color: white;
+
 }
 
 body{
@@ -24,23 +42,48 @@ body{
 
 .top-left-menu{
     position: fixed;
-    left:1px;
-    top:1px;
+    left:0;
+    top:0;
+
+    text-align: left;
+    color: var(--secondary-text-color);
+    font-size: large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    min-width: 200px;
+
+    padding: 2px 10px;
+
+    border: 2px solid var(--border-color);
+
+    background-color: var(--secondary-clr);
 }
 
-.top-left-menu button{
-    text-align: left;
+.theme-btn{
+    cursor: pointer;
+}
+
+.top-left-menu p{
+    margin: auto;
+
+    text-align: center;
+    text-decoration: underline;
+
+    font-weight: bold;
+    font-size: larger;
 }
 
 h1{
-    font-size: 40px;
+    font-size: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--text-color);
 
-    margin: 20px auto 5px;
+    margin: 30px auto 5px;
 }
 
-.hud p{
-    margin: 5px auto 5px;
+.hud button{
+    font-size: 17px;
+    color: var(--text-color);
 }
 
 .smiley{
@@ -54,7 +97,7 @@ h1{
 
 table{
     font-weight: bold;
-    font-size: large;
+    font-size: 24px;
 
     border: 2px solid var(--border-color);
 
@@ -67,8 +110,8 @@ td{
     background-color: var(--cell-clr);
     text-align: center;
 
-    width: 33px;
-    height: 33px;
+    width: 40px;
+    height: 40px;
 
     border-top:3px solid white ;
     border-right:3px solid gray ;
@@ -82,7 +125,8 @@ td{
 
 .footer{
     text-align: center;
-    color: white;
+    font-size: 25px;
+    color: var(--secondary-text-color);
 
     position: fixed;
     bottom: 0;
@@ -92,7 +136,7 @@ td{
     padding-top: 10px;
     padding-bottom: 10px;
 
-    background-color: rgb(77, 77, 77);
+    background-color: var(--secondary-clr);
 }
 
 .revealed{
@@ -101,6 +145,7 @@ td{
 }
 
 .hud button{
+    background-color: var(--secondary-background-clr);
     cursor: pointer;
     transition: 500ms;
 }
@@ -111,22 +156,28 @@ td{
 
 
 .info button{
-    background-color: rgb(255, 255, 255);
+    background-color: var(--secondary-background-clr);
 
     min-height: 50px;
     min-width: 50px;
 
     text-align: center;
+    font-size: 17px;
+    color: var(--text-color);
 }
 
-.hint-btn, .safe-click-btn, .undo-btn{
+.timer span{
+    font-family: monospace;
+}
+
+.hint-btn, .safe-click-btn, .more-info button{
     cursor: pointer;
     opacity: 50%;
     transition: 250ms;
 }
 
 
-.undo-btn{
+.more-info button{
     background-color: var(--background-clr);
     border: none;
     
@@ -138,10 +189,14 @@ td{
 }
 
 .safe-cell{
-    background-color: rgb(94, 255, 94);
+    background-color: aquamarine;
     border: none;
 }
 
-/* .hint-btn:hover, .safe-click-btn:hover{
+.disabled{
+    opacity: 50%;
+}
+
+/* .power-btn:hover{
     background-color: lightblue;
 } */
